--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                     </p>
                 </div>
 
+                <div class="square-wrapper">
+                    <div id="square-n-1" class="square"></div>
+                    <div id="square-n-2" class="square"></div>
+                    <div id="square-n-3" class="square"></div>
+                    <div id="square-n-4" class="square"></div>
+                    <div id="square-n-5" class="square"></div>
+                </div>
+
             </div>
 
         </div>
